--- a/slides/revealjs/styles.css
+++ b/slides/revealjs/styles.css
@@ -228,6 +228,11 @@ body.title a.Link {
   background-color: rgba(189, 215, 238, 1);
 }
 
+.reveal-viewport.title .controls-arrow {
+  color: red;
+  font-size: 2rem;
+}
+
 .language-graphql .hljs-punctuation {
   color: #268bd2;
 }
